--- a/src/ui/feature/comment/Comment.pug
+++ b/src/ui/feature/comment/Comment.pug
@@ -75,9 +75,9 @@ style.
 		border-radius 12px
 		color var(--c-subreddit-theme-text)
 		display inline-block
-		padding 10px
+		padding 12px
 	:global(.comment > .md img)
-		border-radius 0
+		border-radius 6px
 		margin 0
 		max-height 64px
 		width auto
