--- a/src/ui/feature/subreddit/SubredditNameTag.pug
+++ b/src/ui/feature/subreddit/SubredditNameTag.pug
@@ -13,9 +13,12 @@ a.subreddit-tag(href='/{name}')
 
 style.
 	.subreddit-tag
-		align-items center
-		align-self self-start
-		border-radius 99px
-		display inline-flex
-		gap 1ch
-		padding-right 1em
+		border-radius 6px
+		font-feature-settings 'cpsp' 1
+		font-size 10px
+		font-weight bold
+		line-height 1
+		letter-spacing 1px
+		padding 3px 6px
+		text-transform uppercase
+		user-select none
