--- a/src/ui/feature/post/PostLink.pug
+++ b/src/ui/feature/post/PostLink.pug
@@ -5,6 +5,7 @@ script.
 
 	import SubredditNameTag from '../subreddit/SubredditNameTag.pug'
 	import PostFlair from './PostFlair.pug'
+	import PostTag from './PostTag.pug'
 
 	export post_id = null
 	export show_subreddit = false
@@ -29,12 +30,22 @@ script.
 
 {#if post}
 	a.post-link(class:post-downvoted={post.likes === false} class:post-nsfw={post.over_18} class:post-stickied={post.stickied} class:post-upvoted={post.likes === true} class:post-with-low-score={post.score < 1} data-id={post_id} data-locked={post.locked || null} data-radial-menu='post' data-saved={post.saved || null} href={format_url({ post_id, subreddit_name: post.subreddit })} title={post.edited ? Time.sToAbsRelTimeStr(post.created_utc) + ' (edited ' + Time.sToAbsRelTimeStr(post.edited) + ')' : Time.sToAbsRelTimeStr(post.created_utc)})
-		{#if show_subreddit}
-			SubredditNameTag(name={post.subreddit})
-		{:else if post.link_flair_text}
-			PostFlair(color={post.link_flair_background_color} emoji_style='image' rich_text={post.link_flair_richtext} text={post.link_flair_text})
+		ol.post-link-tags
+			{#if post.over_18}
+				PostTag(name='nsfw')
+			{#if post.stickied}
+				PostTag(name='sticky')
+			{#if post.locked}
+				PostTag(name='locked')
+			{#if post.original_content}
+				PostTag(name='oc')
+			{#if show_subreddit}
+				SubredditNameTag(name={post.subreddit})
+			{:else if post.link_flair_text}
+				PostFlair(color={post.link_flair_background_color} emoji_style='image' rich_text={post.link_flair_richtext} text={post.link_flair_text})
 		h1.post-link-title(class:md-spoiler-text={post.spoiler}) {post.title}
-		button.post-link-score(on:mousedown={e => vote(post.likes === true ? 1 : post.likes === false ? -1 : 0, e.button)}) {post.hide_score ? '?' : post.score} ({post.num_comments}) 
+		button.post-link-score(on:mousedown={e => vote(post.likes === true ? 1 : post.likes === false ? -1 : 0, e.button)}) {post.hide_score ? '?' : post.score}
+		span {post.num_comments} comments
 
 style.
 	.post-link
@@ -49,6 +60,7 @@ style.
 		align-items center
 		color var(--c-text-weak)
 		display flex
+		font-size 1.5em
 		gap 6px
 		position absolute
 		right calc(100% + 1em)
@@ -57,8 +69,13 @@ style.
 			color salmon
 		.post-downvoted &
 			color var(--c-text-faint)
+	.post-link-tags
+		display flex
+		gap 3px
 	.post-link-title
-		font-size 16px
-		font-weight inherit
+		font-size 1.25em
+		font-weight normal
+		letter-spacing -0.125pt
+		line-height 1.333
 		margin 0
 		overflow-wrap anywhere
