--- a/src/ui/app/stylesheet.styl
+++ b/src/ui/app/stylesheet.styl
@@ -7,38 +7,22 @@
 
 // Typography
 @font-face
-	font-family 'Inter'
-	font-style normal italic
-	font-weight 100 900
-	src url('../../vendor/inter_100_900.woff2')
-@font-face
-	font-family 'Space Mono'
+	font-family 'Arimo'
 	font-style normal
-	font-weight 400
-	src url('../../vendor/spacemono_400.ttf')
+	font-weight 400 700
+	src url('../../vendor/arimo_400_700.ttf')
 @font-face
-	font-family 'Space Mono'
+	font-family 'Arimo'
 	font-style italic
-	font-weight 400
-	src url('../../vendor/spacemono_400_i.ttf')
-@font-face
-	font-family 'Space Mono'
-	font-style normal
-	font-weight 700
-	src url('../../vendor/spacemono_700.ttf')
-@font-face
-	font-family 'Space Mono'
-	font-style italic
-	font-weight 700
-	src url('../../vendor/spacemono_700_i.ttf')
+	font-weight 400 700
+	src url('../../vendor/arimo_400_700_i.ttf')
 html
-	font 13.5px/22px 'Inter'
-	font-feature-settings 'ss01' 1, 'tnum' 1
+	font 14.5px/1.5 'Arimo', 'Arial', sans-serif
 	letter-spacing 0.125pt // 1/6 pixel
 code
 pre
-	font 12px/22px 'Space Mono'
-	letter-spacing 0.25pt // 1/3 pixel
+	font 12px/1.5 monospace
+	letter-spacing 0
 .md
 	h1
 	h2
