--- a/src/ui/feature/post/PostLink.pug
+++ b/src/ui/feature/post/PostLink.pug
@@ -29,29 +29,24 @@ script.
 			api.submit(api.ID('post_vote', post_id), { numerical_vote: new_vote })
 
 {#if post}
-	li.post-link(class:post-downvoted={post.likes === false} class:post-stickied={post.stickied} class:post-upvoted={post.likes === true})
-		button.post-link-score(on:contextmenu={e => e.preventDefault()} on:mousedown={e => vote(post.likes === true ? 1 : post.likes === false ? -1 : 0, e.button)}) {post.hide_score ? '?' : post.score}
-		a.post-link-body(data-id={post_id} data-locked={post.locked || null} data-radial-menu='post' data-saved={post.saved || null}  href={format_url({ post_id, subreddit_name: post.subreddit })} title={post.edited ? Time.sToAbsRelTimeStr(post.created_utc) + ' (edited ' + Time.sToAbsRelTimeStr(post.edited) + ')' : Time.sToAbsRelTimeStr(post.created_utc)})
-			ol.post-link-tags
-				{#if post.over_18}
-					PostTag(name='nsfw')
-				{#if post.stickied}
-					PostTag(name='sticky')
-				{#if post.locked}
-					PostTag(name='locked')
-				{#if post.original_content}
-					PostTag(name='oc')
-				{#if show_subreddit}
-					SubredditNameTag(name={post.subreddit})
-				{:else if post.link_flair_text}
-					PostFlair(color={post.link_flair_background_color} emoji_style='image' rich_text={post.link_flair_richtext} text={post.link_flair_text})
-			h1.post-link-title(class:md-spoiler-text={post.spoiler}) {post.title}
-			data.post-link-num-comments {post.num_comments} comments
+	a.post-link(class:post-downvoted={post.likes === false} class:post-stickied={post.stickied} class:post-upvoted={post.likes === true} data-id={post_id} data-locked={post.locked || null} data-radial-menu='post' data-saved={post.saved || null}  href={format_url({ post_id, subreddit_name: post.subreddit })} title={post.edited ? Time.sToAbsRelTimeStr(post.created_utc) + ' (edited ' + Time.sToAbsRelTimeStr(post.edited) + ')' : Time.sToAbsRelTimeStr(post.created_utc)})
+		ol.post-link-tags
+			{#if post.over_18}
+				PostTag(name='nsfw')
+			{#if post.stickied}
+				PostTag(name='sticky')
+			{#if post.locked}
+				PostTag(name='locked')
+			{#if post.original_content}
+				PostTag(name='oc')
+			{#if show_subreddit}
+				SubredditNameTag(name={post.subreddit})
+			{:else if post.link_flair_text}
+				PostFlair(color={post.link_flair_background_color} emoji_style='image' rich_text={post.link_flair_richtext} text={post.link_flair_text})
+		h1.post-link-title(class:md-spoiler-text={post.spoiler}) {post.title}
 
 style.
 	.post-link
-		position relative
-	.post-link-body
 		align-items flex-start
 		border-radius 12px
 		display flex
@@ -61,28 +56,11 @@ style.
 		&:hover
 			background var(--c-subreddit-theme)
 			color var(--c-subreddit-theme-text)
-	.post-link-num-comments
-		color var(--c-text-weak)
-	.post-link-score
-		align-items center
-		color var(--c-text-weak)
-		display flex
-		font-size 1.5em
-		gap 6px
-		position absolute
-		right calc(100% + 1em)
-		white-space pre
-		.post-upvoted &
-			color salmon
-		.post-downvoted &
-			color var(--c-text-faint)
 	.post-link-tags
 		display flex
 		gap 3px
 	.post-link-title
-		font-size 1.25em
-		font-weight normal
-		letter-spacing -0.125pt
+		font inherit
 		line-height 1.333
 		margin 0
 		overflow-wrap anywhere
@@ -91,6 +69,6 @@ style.
 			font-weight bold
 		&.md-spoiler-text
 			padding 0
-			.post-link-body:hover &
+			.post-link:hover &
 				background inherit
 				color inherit
